--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,8 @@
 @import '../Components/button/CButton.scss';
 @import '../Components/card/CCard.scss';
 @import '../Components/text-input/CTextInput.scss';
+@import '../Components/banner/CBanner.scss';
+
 .main {
 	background: $color-background;
 	.App-header {
